--- a/src/index.html
+++ b/src/index.html
@@ -68,15 +68,17 @@
           </div>
           <div id="content">
             <form onSubmit="App.createTask(); return false;">
-              <input id="newTask" type="text" class="form-control" placeholder="Add task..." required>
+              <input id="newProjectname" type="text" class="form-control" placeholder="Add project name" required>
+              <input id="newProjectDescription" type="text" class="form-control" placeholder="Add project description" required>
+              <input id="newProjectAmount" type="text" class="form-control" placeholder="Add required amount" required>
               <input type="submit" hidden="">
             </form>
             <ul id="taskList" class="list-unstyled">
               <div class="taskTemplate" class="checkbox" style="display: none">
                 <label>
                   <input type="checkbox" />
-                  <span class="content">Task content goes here...</span>
-                </label>
+                  <span class="name">Task content goes here...</span>                  <span class="description">Task content goes here...</span>
+                  <span class="amount">Task content goes here...</span>                </label>
               </div>
             </ul>
             <ul id="completedTaskList" class="list-unstyled">
