multi-sig transactions working

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,7 @@
               <input id="newProjectname" type="text" class="form-control" placeholder="Add project name" required>
               <input id="newProjectDescription" type="text" class="form-control" placeholder="Add project description" required>
               <input id="newProjectAmount" type="text" class="form-control" placeholder="Add required amount" required>
+              <input id="newProjectShop" type="text" class="form-control" placeholder="Add Shop ID" required>
               <input type="submit" hidden="">
             </form>
             <ul id="taskList" class="list-unstyled">
@@ -78,7 +79,8 @@
                 <label>
                   <input type="checkbox" />
                   <span class="name">Task content goes here...</span>                  <span class="description">Task content goes here...</span>
-                  <span class="amount">Task content goes here...</span>                </label>
+                  <span class="amount">Task content goes here...</span>                <span class="shop">Task content goes here...</span> 
+                </label>
               </div>
             </ul>
             <ul id="completedTaskList" class="list-unstyled">
