Beneficiary signs transaction

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,3 @@
-<!-- <html>
-    <head>
-        <title>ClarityInCharity</title>
-    </head>
-    <body>
-
-    </body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -75,23 +65,25 @@
         </noscript>
       </div>
       <div id="placeholder">
-
       </div>
-      <div class="css-11tvqdk e2qsm6r0"> 
+
+      <div class="css-11tvqdk e2qsm6r0" style="padding: 10; display: flex; flex-wrap: wrap; justify-content: center;"> 
         <h2 class="css-hbrrfi">Welcome!</h2>
-        <!-- <h2 class="css-p9m7yl">future of giving</h2> -->
-        <!-- <span class="css-1d108uq">Donate directly to social good projects with zero added fees.</span> -->
-        <div rows="2" class="css-1vmdjye">
-          <span class="css-dsbhw1">Explore Projects to Donate to</span>
-          <button class="css-1tgayaa"><a href = "donor.html" style="color: #FFFFFF"><span> Start Donating </span></a></button>
+        <div>
+          <h3>About Us</h3>
+          <p>...</p>
         </div>
-        <div rows="2" class="css-1vmdjye">
-          <span class="css-dsbhw1">Add a new Charity Project</span>
-          <button class="css-1tgayaa"><a href = "project.html" style="color: #FFFFFF"><span> Add project </span></a></button>
+        <div rows="2" class="css-1vmdjye" style="margin: 30px 10px 30px 10px">
+          <!-- <span class="css-dsbhw1">Explore Projects to Donate to</span> -->
+          <button class="css-1tgayaa"><a href = "donor.html" style="color: #FFFFFF"><span> Donor </span></a></button>
         </div>
-        <div rows="2" class="css-1vmdjye">
-          <span class="css-dsbhw1">Add a Corporate store</span>
-          <button class="css-1tgayaa"><a href = "shop.html" style="color: #FFFFFF"><span> Add Store </span></a></button>
+        <div rows="2" class="css-1vmdjye" style="margin: 25px 10px 25px 10px">
+          <!-- <span class="css-dsbhw1">Add a new Charity Project</span> -->
+          <button class="css-1tgayaa"><a href = "project.html" style="color: #FFFFFF"><span> Beneficiary </span></a></button>
+        </div>
+        <div rows="2" class="css-1vmdjye" style="margin: 25px 10px 25px 10px">
+          <!-- <span class="css-dsbhw1">Add a Corporate store</span> -->
+          <button class="css-1tgayaa"><a href = "shop.html" style="color: #FFFFFF"><span> Corporate Store </span></a></button>
         </div>
       </div>
       <div class="css-1875s3c">
