--- a/src/signPayment.html
+++ b/src/signPayment.html
@@ -75,10 +75,10 @@
                     <!-- <img class="card-img" src="" alt="Card image cap"> -->
                     <div class="card-body">
                       <h5><span>Payment ID: </span><span class="paymentId">ID</span></h5>
-                      <p><span>Donor's Addres: </span> <span class="donorAddr">donor Address</span></p>
+                      <p><span>Donor's Address: </span> <span class="donorAddr">donor Address</span></p>
                       <p><span>Donated Amount: </span> <span class="donatedAmt">amount</span></p>
                       <!-- <p> <span>Supplier: </span> <span class="shop">shop</span></p> -->
-                      <button onclick="App.addSign();" class="sign-btn">Sign Transaction</button>
+                      <button class="sign-btn">Sign Transaction</button>
                     </div>
                   </div>
               <!-- <div class="taskTemplate" class="checkbox" style="display: none">
