working complete transaction - to test

--- a/src/sendMoney.html
+++ b/src/sendMoney.html
@@ -79,7 +79,7 @@
                       <p><span>Shop ID: </span> <span class="shopID">shop id</span></p>
                       <p><span>Amount: </span> <span class="amt">amount</span></p>
                       <!-- <p> <span>Supplier: </span> <span class="shop">shop</span></p> -->
-                      <button onclick="App.sendmoney();" class="send-btn">Complete Transaction</button>
+                      <button class="send-btn">Complete Transaction</button>
                     </div>
                   </div>
               <!-- <div class="taskTemplate" class="checkbox" style="display: none">
