--- a/src/project.html
+++ b/src/project.html
@@ -46,7 +46,7 @@
 
   <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="http://www.dappuniversity.com/free-download" target="_blank">Clarity In Charity</a>
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="index.html">Clarity In Charity</a>
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap d-none d-sm-none d-sm-block">
           <small><a class="nav-link" href="#"><span id="account"></span></a></small>
@@ -82,7 +82,12 @@
           <button class="css-1tgayaa"><a href = "signPayment.html" style="color: #FFFFFF"><span> Sign Payments </span></a></button>
         </div>
         <div rows="2" class="css-1vmdjye" style="margin: 25px 10px 25px 10px">
-            <span class="css-dsbhw1">Your Balance</span>
+          <h2 class="css-dsbhw1">Your Balance</h2>
+          <ul  id="balanceProj">
+            <div class="projInfo" style="display: none;">
+                <p>Your Balance so far: <span class="proj-bal">project balance</span></p>
+              </div>
+          </ul>
             <!-- <button class="css-1tgayaa"><a href = "project.html" style="color: #FFFFFF"><span> Sign Payments </span></a></button> -->
         </div>
       </div>
