--- a/src/donor.html
+++ b/src/donor.html
@@ -46,7 +46,7 @@
 
   <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="http://www.dappuniversity.com/free-download" target="_blank">Clarity In Charity</a>
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="index.html">Clarity In Charity</a>
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap d-none d-sm-none d-sm-block">
           <small><a class="nav-link" href="#"><span id="account"></span></a></small>
