--- a/src/sendMoney.html
+++ b/src/sendMoney.html
@@ -1,13 +1,3 @@
-<!-- <html>
-    <head>
-        <title>ClarityInCharity</title>
-    </head>
-    <body>
-
-    </body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -55,7 +45,7 @@
 
   <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="http://www.dappuniversity.com/free-download" target="_blank">Clarity In Charity</a>
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="index.html">Clarity In Charity</a>
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap d-none d-sm-none d-sm-block">
           <small><a class="nav-link" href="#"><span id="account"></span></a></small>
@@ -70,6 +60,7 @@
             <p class="text-center">Loading...</p>
           </div>
           <div id="content">
+            <h4>Pending Donations</h4>
             <ul id="payList" class="list-unstyled" style="padding: 10; justify-content: center;">
                 <div class="payTemplate" style="width: 18rem; display: none; margin: 25px 5px 25px 5px">
                     <!-- <img class="card-img" src="" alt="Card image cap"> -->
@@ -82,15 +73,19 @@
                       <button class="send-btn">Complete Transaction</button>
                     </div>
                   </div>
-              <!-- <div class="taskTemplate" class="checkbox" style="display: none">
-                <label>
-                  <input type="checkbox" />
-                  <span class="name">Task content goes here...</span>                  <span class="description">Task content goes here...</span>
-                  <span class="amount">Task content goes here...</span>                <span class="shop">Task content goes here...</span> 
-                </label>
-              </div> -->
             </ul>
-            
+            <h4>Past Donations</h4>
+            <ul id="payedList" class="list-unstyled" style="padding: 10; justify-content: center;">
+                <div class="payedTemplate" style="width: 18rem; display: none; margin: 25px 5px 25px 5px">
+                    <!-- <img class="card-img" src="" alt="Card image cap"> -->
+                    <div class="card-body">
+                      <h5><span>Payment ID: </span><span class="paymentId">ID</span></h5>
+                      <p><span>Project ID: </span> <span class="projID">project id</span></p>
+                      <p><span>Shop ID: </span> <span class="shopID">shop id</span></p>
+                      <p><span>Amount: </span> <span class="amt">amount</span></p>
+                    </div>
+                  </div>
+            </ul>
           </div>
         </main>
       </div>
