--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex align-items-center">
+  <section id="hero" class="d-flex align-items-center" style="margin-top:100px">
 
     <div class="container">
       <div class="row">
