--- a/src/shop.html
+++ b/src/shop.html
@@ -65,7 +65,7 @@
 
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex align-items-center">
+  <section id="hero" class="d-flex align-items-center" style="margin-top:100px">
 
     <div class="container">
       <div class="row">
@@ -167,7 +167,7 @@
   <script src="../assets/js/main.js"></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  
+
  <script src="../vendor/web3/dist/web3.js"></script>
   <script src="../vendor/truffle-contract/dist/truffle-contract.js"></script>
   <script src="app.js"></script>
