Shitty UI complete till end

--- a/src/donor.html
+++ b/src/donor.html
@@ -74,14 +74,14 @@
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-laptop"></i></div>
-              <h4 class="title"><a href="src/choseProject.html">Choose Project</a></h4>
+              <h4 class="title"><a href="chooseProject.html">Choose Project</a></h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href="src/sendMoney.html">Send Money</a></h4>
+              <h4 class="title"><a href="sendMoney.html">Send Money</a></h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
             </div>
           </div>
