--- a/src/createProject.html
+++ b/src/createProject.html
@@ -1,62 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Introduction to Blockchain and Cryptocurrency | Clarity In Charity</title>
 
-    <!-- Bootstrap -->
-    <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <style>
-      main {
-        margin-top: 60px;
-      }
+  <title>eNno Bootstrap Template - Index</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-      #content {
-        display: none;
-      }
+  <!-- Favicons -->
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-      form {
-        width: 350px;
-        margin-bottom: 10px;
-      }
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-      ul {
-        margin-bottom: 0px;
-      }
+  <!-- Vendor CSS Files -->
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-      #completedTaskList .content {
-        color: grey;
-        text-decoration: line-through;
-      }
-    </style>
+  <!-- Template Main CSS File -->
+  <link href="../assets/css/style.css" rel="stylesheet">
 
-  </head>
+  <!-- =======================================================
+  * Template Name: eNno - v4.7.0
+  * Template URL: https://bootstrapmade.com/enno-free-simple-bootstrap-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+</head>
 
-  <body>
-    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="index.html">Clarity In Charity</a>
-      <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap d-none d-sm-none d-sm-block">
-          <small><a class="nav-link" href="#"><span id="account"></span></a></small>
-        </li>
-      </ul>
-    </nav>
-    
-    <div>
+<body>
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <h1 class="logo"><a href="../index.html">Clarity</a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo"><img src="../assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto active" href="../index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="src/donor.html">Donor</a></li>
+          <li><a class="nav-link scrollto " href="src/project.html">Project</a></li>
+          <li><a class="nav-link scrollto" href="src/store.html">Store</a></li>
+          <li><a class="nav-link scrollto" href="#team">team</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header><!-- End Header -->
+
+
+
+
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex align-items-center" style="margin-top:100px">
+
+    <div class="container" style="margin-top:200px">
       <div class="row">
+        <div class="pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
+
         <main role="main" class="col-lg-12 justify-content-center">
           <div id="loader" class="text-center">
             <p class="text-center">Loading...</p>
           </div>
+          <h2> Enter project details and choose cooperative shop</h2>
           <div id="content">
             <form onSubmit="App.createTask(); return false;">
               <input id="newProjectname" type="text" class="form-control" placeholder="Add project name" required>
               <input id="newProjectDescription" type="text" class="form-control" placeholder="Add project description" required>
-              <input id="newProjectAmount" type="text" class="form-control" placeholder="Add required amount" required>
+              <input id="newProjectAmount" type="text" class="form-control" placeholder="Add required amount in ETH" required>
 
             </form>
             <br>
@@ -66,7 +90,7 @@
           <div id="content_2">
             <ul id="storeList" class="list-unstyled" style="padding: 10; display: flex; flex-wrap: wrap; justify-content: center;">
                 <div class="storeTemplate" style="width: 18rem; display: none; margin: 25px 5px 25px 5px">
-                    <img class="card-img" src="" alt="Card image cap">
+                    <img class="card-img" src="" alt="Card image cap" width="100rem" height="150rem">
                     <div class="card-body">
                       <h5 class="name">Card title</h5>
                       <p class="description">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -83,16 +107,34 @@
               <button onclick="App.submitProject();"> Submit Project </button>
           </div>
         </main>
+
+        </div>
       </div>
     </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="vendor/web3/dist/web3.js"></script>
-    <script src="vendor/truffle-contract/dist/truffle-contract.js"></script>
-    <script src="app.js"></script>
-  </body>
+  </section><!-- End Hero -->
+
+    <!-- End Featured Services Section -->
+
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="../assets/vendor/purecounter/purecounter.js"></script>
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="../assets/js/main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  
+ <script src="../vendor/web3/dist/web3.js"></script>
+  <script src="../vendor/truffle-contract/dist/truffle-contract.js"></script>
+  <script src="app.js"></script>
+
+</body>
 
 </html>
+
