--- a/src/createProject.html
+++ b/src/createProject.html
@@ -41,19 +41,20 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo"><a href="../index.html">Clarity</a></h1>
+      <div class="navbar">
+        <small><a class="nav-link" href="#"><span>Address :- </span><span id="account"></span></a></small>
+      </div>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="../assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="../index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="src/donor.html">Donor</a></li>
-          <li><a class="nav-link scrollto " href="src/project.html">Project</a></li>
-          <li><a class="nav-link scrollto" href="src/store.html">Store</a></li>
-          <li><a class="nav-link scrollto" href="#team">team</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <<li><a class="nav-link scrollto active" href="../index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="../index.html#about">About</a></li>
+          <li><a class="nav-link scrollto" href="./donor.html">Donor</a></li>
+          <li><a class="nav-link scrollto " href="./project.html">Project</a></li>
+          <li><a class="nav-link scrollto" href="./shop.html">Store</a></li>
+          <li><a class="nav-link scrollto" href="../index.html#team">team</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
